--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 .slideshow-container {
   max-width: 1000px;
   position: relative;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Hide the images by default */
